--- a/spec/unit_tests/fixtures/files/Job-Build-Maven.yaml
+++ b/spec/unit_tests/fixtures/files/Job-Build-Maven.yaml
@@ -24,3 +24,8 @@
             - params: VM_NAME=${VM_NAME}
     wrappers:
       - timestamp: true
+      - maven3artifactory:
+          url: https://artifactory.com/artifactory
+          artifactory-name: name
+          release-repo: release
+          snapshot-repo: snapshot
