--- a/spec/unit_tests/fixtures/files/post_build_script.yaml
+++ b/spec/unit_tests/fixtures/files/post_build_script.yaml
@@ -3,9 +3,9 @@
     name: post_build_script
     publishers:
       - post_build_script:
-          shell_command:
-            - 'echo "line one"'
-            - 'echo "line two"'
+          shell_command: |
+            echo "line one"
+            echo "line two"
           on_success: true
           on_failure: false
           execute_on: BOTH
