Fixed a typo and added remote_name

--- a/spec/unit_tests/fixtures/files/Job-Build-Maven.yaml
+++ b/spec/unit_tests/fixtures/files/Job-Build-Maven.yaml
@@ -7,7 +7,7 @@
     scm_params:
       local_branch: release
       wipe_workspace: true
-      excuded_users: user
+      excluded_users: user
     builders:
       - shell_command: |
           echo 'Doing some work'
