--- a/spec/unit_tests/fixtures/files/Job-Gem-Build.yaml
+++ b/spec/unit_tests/fixtures/files/Job-Gem-Build.yaml
@@ -5,7 +5,7 @@
     scm_url: git@github.com:devops/repo.git
     scm_branch: master
     scm_params:
-      excuded_users: user
+      excluded_users: user
     shell_command: 'run.sh'
     triggers:
       - scm_polling: 'H/5 * * * *'
