Added support for artifactory metadata

--- a/spec/unit_tests/fixtures/files/Job-Gem-Build.yaml
+++ b/spec/unit_tests/fixtures/files/Job-Gem-Build.yaml
@@ -17,6 +17,7 @@
           release-repo: gems-local
           publish: 'pkg/*.gem'
           publish-build-info: true
+          properties: foo=bar
       - inject_env_var:
           content: |
             VAR1 = value_1
