--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,6 +26,7 @@ Style/LineLength:
     - 'spec/lib/jenkins_pipeline_builder/compiler_spec.rb'
     - 'spec/lib/jenkins_pipeline_builder/view_spec.rb'
     - 'spec/lib/jenkins_pipeline_builder/pull_request_spec.rb'
+    - 'lib/jenkins_pipeline_builder/extensions/*'
 
 # Configuration parameters: CountComments.
 Style/MethodLength:
