Adding all_branched_true from travis-ci/travis-ci#1675

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ deploy:
   gem: jenkins_pipeline_builder
   on:
     tags: true
+    all_branches: true
     repo: constantcontact/jenkins_pipeline_builder
