--- a/spec/lib/jenkins_pipeline_builder/fixtures/generator_tests/local_override/all_local/10.yaml
+++ b/spec/lib/jenkins_pipeline_builder/fixtures/generator_tests/local_override/all_local/10.yaml
@@ -1,6 +1,6 @@
 - job_template:
     name: '{{name}}-10'
-    description: 'Overriden stuff'
+    description: 'Overridden stuff'
     builders:
       - shell_command: |
           echo "Overridden stuff"
