--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,7 +19,7 @@ Metrics/LineLength:
     - 'spec/lib/jenkins_pipeline_builder/view_spec.rb'
     - 'spec/lib/jenkins_pipeline_builder/pull_request_spec.rb'
     - 'spec/lib/jenkins_pipeline_builder/pull_request_generator_spec.rb'
-    - 'lib/jenkins_pipeline_builder/extensions/*'
+    - 'lib/jenkins_pipeline_builder/extensions/**/*'
 
 Style/Documentation:
   Enabled: false
@@ -27,12 +27,12 @@ Style/Documentation:
 # Configuration parameters: EnforcedStyle, SupportedStyles.
 Style/Next:
   Exclude:
-    - 'lib/jenkins_pipeline_builder/extensions/*'
+    - 'lib/jenkins_pipeline_builder/extensions/**/*'
 
 # Configuration parameters: EnforcedStyle, SupportedStyles.
 Style/VariableName:
   Exclude:
-    - 'lib/jenkins_pipeline_builder/extensions/*'
+    - 'lib/jenkins_pipeline_builder/extensions/**/*'
 
 Style/SymbolProc:
   IgnoredMethods: new
