--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,8 @@ Metrics/CyclomaticComplexity:
   Max: 9
 Metrics/PerceivedComplexity:
   Max: 11
+Metrics/AbcSize:
+  Max: 26
 Metrics/MethodLength:
   Max: 20
 Metrics/ClassLength:
