CD-2416: Add support for preBuildCleanup in .yaml
CD-2416: Change `pre_build` to `prebuild`

--- a/pipeline/Jenkins-Pipeline-Builder.yaml
+++ b/pipeline/Jenkins-Pipeline-Builder.yaml
@@ -12,6 +12,9 @@
       - timestamp: true
       - ansicolor: true
       - rvm: "`cat .ruby-version`"
+      - prebuild_cleanup:
+          delete_directories: false
+          cleanup_parameter: 'CLEANUP'
     publishers:
       - junit_result:
           test_results: 'out/**/*.xml'
