Adding coverage reporter (#130)
* adding publisher definitions for github status reporter

* adding conditional logic for master/compare coverage actions

* removing rubocop pinning

* first round of rubocop fixes, test fixes

* fixing failures

* adding .rubocop_todo.yml

* pinning rubocop ruby version support

* removing weird pending element

* Revert "removing weird pending element"

This reverts commit cdde933cb0f3adb3ebbd5c7817fb3d28022ee0ff.

* moving test back to pending

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,8 @@
+AllCops:
+  TargetRubyVersion: 2.1.5
+
+inherit_from: .rubocop_todo.yml
+
 #######
 # WIP These should all go back to defaults at some point
 Metrics/AbcSize:
@@ -33,3 +38,6 @@ Style/VariableName:
 
 Style/SymbolProc:
   IgnoredMethods: new
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
